--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3230 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "homepage" : "https://anminam.github.io/minimoongo/"
+    "homepage": "https://anminam.github.io/minimoongo/",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,6 +45,13 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.0.0"
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-info": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/preset-create-react-app": "^3.0.0",
+    "@storybook/react": "^5.3.19",
+    "gh-pages": "^3.0.0",
+    "react-docgen-typescript-loader": "^3.7.2"
   }
 }
