--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "sourceMap": true,
+    "rootDirs": ["src", "stories"],
   },
   "include": [
     "src"
