--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.0.0",
     "@storybook/react": "^5.3.19",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "gh-pages": "^3.0.0",
+    "prettier": "^2.0.5",
     "react-docgen-typescript-loader": "^3.7.2"
   }
 }
