--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,9 +16,7 @@
     "jsx": "react",
     "baseUrl": "src",
     "sourceMap": true,
-    "rootDirs": ["src", "stories"],
+    "rootDirs": ["src", "stories"]
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
