--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "PORT=3230 react-scripts start",
+    "start": "react-scripts start",
+    "macstart": "PORT=3230 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
