--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "homepage": "https://anminam.github.io/minimoongo/",
     "storybook": "NODE_PATH=src/ start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
+  "homepage": "https://anminam.github.io/minimoongo/",
+  "site_url": "https://anminam.github.io/minimoongo/",
   "eslintConfig": {
     "extends": "react-app"
   },
