--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "storybook": "NODE_PATH=src/ start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "homepage": "https://anminam.github.io/minimoongo/"
   },
-  "homepage": "https://anminam.github.io/minimoongo/",
-  "site_url": "https://anminam.github.io/minimoongo/",
   "eslintConfig": {
     "extends": "react-app"
   },
