--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -26,7 +27,8 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "winston": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,7 +40,9 @@
     "deploy": "gh-pages -d build",
     "storybook": "NODE_PATH=src/ start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
-    "homepage": "https://anminam.github.io/minimoongo/"
+    "homepage": "https://anminam.github.io/minimoongo/",
+    "server": "npm run ./server/main.js"
+
   },
   "eslintConfig": {
     "extends": "react-app"
