--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.42",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "axios": "^0.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.14.1",
@@ -42,7 +45,6 @@
     "build-storybook": "build-storybook -s public",
     "homepage": "https://anminam.github.io/minimoongo/",
     "server": "npm run ./server/main.js"
-
   },
   "eslintConfig": {
     "extends": "react-app"
