--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^12.12.42",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -29,6 +32,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.1.1",
     "typesafe-actions": "^5.1.0",
     "typescript": "^3.7.5",
     "winston": "^3.2.1"
