--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
+    "chromedriver": "^83.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
